--- a/camera.html
+++ b/camera.html
@@ -68,6 +68,30 @@
     .btn-primary, .btn-success {
       width: 100%;
     }
+
+    .navigation-buttons {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 20px;
+    }
+
+    .sample-info {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .sample-info img {
+      width: 120px;
+      height: auto;
+      border-radius: 50%;
+    }
+
+    .sample-info .info-details {
+      text-align: left;
+    }
   </style>
 </head>
 <body>
@@ -95,13 +119,18 @@
           <label for="phoneRM">Phone Number:</label>
           <input type="tel" id="phoneRM" class="form-control" placeholder="Enter your phone number">
         </div>
-        <button class="btn btn-primary mt-3" onclick="nextStep(1)">Next</button>
+        <div class="navigation-buttons">
+          <button class="btn btn-primary" onclick="nextStep(1)">Next</button>
+        </div>
       </div>
 
       <div class="step" id="step2">
         <h3>Enter OTP</h3>
         <input type="text" id="otp" class="form-control" placeholder="Enter OTP">
-        <button class="btn btn-primary mt-3" onclick="nextStep(2)">Next</button>
+        <div class="navigation-buttons">
+          <button class="btn btn-secondary" onclick="prevStep(1)">Previous</button>
+          <button class="btn btn-primary" onclick="nextStep(2)">Next</button>
+        </div>
       </div>
 
       <div class="step" id="step3">
@@ -119,13 +148,26 @@
         <div id="biometricFields" class="mt-3" style="display:none;">
           <p>Biometric scanning functionality will be added here.</p>
         </div>
-        <button class="btn btn-primary mt-3" onclick="nextStep(3)">Next</button>
+        <div class="navigation-buttons">
+          <button class="btn btn-secondary" onclick="prevStep(2)">Previous</button>
+          <button class="btn btn-primary" onclick="nextStep(3)">Next</button>
+        </div>
       </div>
 
       <div class="step" id="step4">
         <h3>Verify Your Information</h3>
-        <p>Please verify your full information before proceeding.</p>
-        <button class="btn btn-primary mt-3" onclick="nextStep(4)">Next</button>
+        <div class="sample-info">
+          <img src="https://via.placeholder.com/120" alt="Sample User">
+          <div class="info-details">
+            <p><strong>Name:</strong> John Doe</p>
+            <p><strong>ID Number:</strong> 12345678</p>
+            <p><strong>Phone:</strong> +1234567890</p>
+          </div>
+        </div>
+        <div class="navigation-buttons">
+          <button class="btn btn-secondary" onclick="prevStep(3)">Previous</button>
+          <button class="btn btn-primary" onclick="nextStep(4)">Next</button>
+        </div>
       </div>
 
       <div class="step" id="step5">
@@ -135,7 +177,10 @@
           <div class="camera-square"></div>
         </div>
         <button class="btn btn-primary" id="capture">Capture ID</button>
-        <button class="btn btn-primary mt-3" onclick="nextStep(5)">Next</button>
+        <div class="navigation-buttons">
+          <button class="btn btn-secondary" onclick="prevStep(4)">Previous</button>
+          <button class="btn btn-primary" onclick="nextStep(5)">Next</button>
+        </div>
       </div>
 
       <div class="step" id="step6">
@@ -146,77 +191,83 @@
           <option value="current">Current Account</option>
           <option value="business">Business Account</option>
         </select>
-        <button class="btn btn-primary mt-3" onclick="nextStep(6)">Next</button>
+        <div class="navigation-buttons">
+          <button class="btn btn-secondary" onclick="prevStep(5)">Previous</button>
+          <button class="btn btn-primary" onclick="nextStep(6)">Next</button>
+        </div>
       </div>
 
       <div class="step" id="step7">
         <h3>Complete Address and Next of Kin Information</h3>
         <input type="text" id="address" class="form-control" placeholder="Address">
         <input type="text" id="nextOfKin" class="form-control mt-3" placeholder="Next of Kin">
-        <button class="btn btn-primary mt-3" onclick="nextStep(7)">Next</button>
+        <div class="navigation-buttons">
+          <button class="btn btn-secondary" onclick="prevStep(6)">Previous</button>
+          <button class="btn btn-primary" onclick="nextStep(7)">Next</button>
+        </div>
       </div>
 
       <div class="step" id="step8">
         <h3>Agree to Terms and Conditions</h3>
         <input type="checkbox" id="termsCheckbox">
         <label for="termsCheckbox">I agree to the terms and conditions</label>
-        <button class="btn btn-success mt-3" onclick="submitForm()">Submit</button>
+        <div class="navigation-buttons">
+          <button class="btn btn-secondary" onclick="prevStep(7)">Previous</button>
+          <button class="btn btn-success" onclick="submitForm()">Submit</button>
+        </div>
       </div>
 
       <div id="successMessage" class="mt-5" style="display:none;">
-        <h3>Congratulations!</h3>
-        <p>Your information is under review. You will receive a confirmation via message or email about your account number.</p>
+        <h3
+
+>Congratulations!</h3>
+        <p>Your information is under review. You will receive a confirmation via message or email with your account number.</p>
       </div>
     </div>
   </div>
 
   <footer class="footer text-center">
-    <p>&copy; 2024 Account Opening Portal. All rights reserved.</p>
+    <p>&copy; 2024 Account Opening Service</p>
   </footer>
 
-  <!-- Bootstrap JS and dependencies -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    const video = document.getElementById('video');
-    let stream;
-
-    async function startCamera() {
-      try {
-        stream = await navigator.mediaDevices.getUserMedia({
-          video: { facingMode: 'environment' }
-        });
-        video.srcObject = stream;
-      } catch (error) {
-        console.error("Error accessing the camera: ", error);
-      }
-    }
-
-    async function captureID() {
-      alert("ID captured!");  // Implement capturing logic here.
-    }
+    let currentStep = 1;
 
     function showAccountFields() {
       const method = document.getElementById('accountMethod').value;
-      document.getElementById('selfFields').style.display = (method === 'self') ? 'block' : 'none';
-      document.getElementById('rmFields').style.display = (method === 'rm') ? 'block' : 'none';
+      document.getElementById('selfFields').style.display = method === 'self' ? 'block' : 'none';
+      document.getElementById('rmFields').style.display = method === 'rm' ? 'block' : 'none';
     }
 
     function showVerificationFields() {
-      const method = document.getElementById('verificationMethod').value;
-      document.getElementById('securityFields').style.display = (method === 'security') ? 'block' : 'none';
-      document.getElementById('biometricFields').style.display = (method === 'biometric') ? 'block' : 'none';
+      const verificationMethod = document.getElementById('verificationMethod').value;
+      document.getElementById('securityFields').style.display = verificationMethod === 'security' ? 'block' : 'none';
+      document.getElementById('biometricFields').style.display = verificationMethod === 'biometric' ? 'block' : 'none';
     }
 
-    function nextStep(currentStep) {
-      const steps = document.querySelectorAll('.step');
-      steps[currentStep - 1].classList.remove('active');
-      if (currentStep === 5) {
-        startCamera();  // Start camera when reaching capture ID step
-      }
-      steps[currentStep].classList.add('active');
+    function nextStep(step) {
+      document.getElementById(`step${step}`).classList.remove('active');
+      document.getElementById(`step${step + 1}`).classList.add('active');
+      currentStep++;
     }
 
-    async function submitForm() {
+    function prevStep(step) {
+      document.getElementById(`step${step + 1}`).classList.remove('active');
+      document.getElementById(`step${step}`).classList.add('active');
+      currentStep--;
+    }
+
+    function captureID() {
+      const video = document.getElementById('video');
+      const canvas = document.createElement('canvas');
+      canvas.width = video.videoWidth;
+      canvas.height = video.videoHeight;
+      const ctx = canvas.getContext('2d');
+      ctx.drawImage(video, 0, 0);
+      // Do something with the captured image.
+    }
+
+    function submitForm() {
       const termsChecked = document.getElementById('termsCheckbox').checked;
       if (!termsChecked) {
         alert("You must agree to the terms and conditions.");
@@ -226,8 +277,21 @@
       document.getElementById('successMessage').style.display = 'block';
     }
 
-    // Capture ID button
-    document.getElementById('capture').addEventListener('click', captureID);
+    // Camera Permission for iPhone
+    if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
+      document.getElementById('step5').addEventListener('click', () => {
+        navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } })
+          .then(stream => {
+            const video = document.getElementById('video');
+            video.srcObject = stream;
+            video.play();
+          })
+          .catch(err => {
+            console.error("Error accessing camera: ", err);
+          });
+      });
+    }
+
   </script>
 </body>
 </html>
