--- a/camera.html
+++ b/camera.html
@@ -3,43 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Account Opening Form</title>
+  <title>ID Scanner</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    body {
-      background-color: #f8f9fa;
-    }
-
-    .header, .footer {
-      background-color: #007bff;
-      color: white;
-      padding: 10px 0;
-    }
-
-    .footer {
-      position: relative;
-      bottom: 0;
-      width: 100%;
-      padding: 20px 0;
-    }
-
-    .container {
-      margin-top: 20px;
-      background-color: white;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      padding: 20px;
-    }
-
-    .step {
-      display: none;
-    }
-
-    .step.active {
-      display: block;
-    }
-
+    /* CSS for camera layout */
     .camera-container {
       width: 320px;
       height: 240px;
@@ -65,233 +33,105 @@
       height: auto;
     }
 
-    .btn-primary, .btn-success {
+    footer {
+      position: fixed;
+      bottom: 0;
       width: 100%;
-    }
-
-    .navigation-buttons {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 20px;
-    }
-
-    .sample-info {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 20px;
-    }
-
-    .sample-info img {
-      width: 120px;
-      height: auto;
-      border-radius: 50%;
-    }
-
-    .sample-info .info-details {
-      text-align: left;
+      text-align: center;
+      background-color: #f8f9fa;
+      padding: 10px 0;
     }
   </style>
 </head>
 <body>
-  <header class="header text-center">
-    <h1>Account Opening Portal</h1>
-  </header>
-
-  <div class="container text-center">
-    <h2>Account Opening Form</h2>
-    <div id="formContainer">
-      <div class="step active" id="step1">
-        <h3>Select Account Opening Method</h3>
-        <select id="accountMethod" class="form-select" onchange="showAccountFields()">
-          <option value="">Choose...</option>
-          <option value="self">Self</option>
-          <option value="rm">Assisted by RM</option>
-        </select>
-        <div id="selfFields" class="mt-3" style="display:none;">
-          <label for="phoneSelf">Phone Number:</label>
-          <input type="tel" id="phoneSelf" class="form-control" placeholder="Enter your phone number">
-        </div>
-        <div id="rmFields" class="mt-3" style="display:none;">
-          <label for="oneTimeCode">Assistance One-Time Code:</label>
-          <input type="text" id="oneTimeCode" class="form-control" placeholder="Enter one-time code">
-          <label for="phoneRM">Phone Number:</label>
-          <input type="tel" id="phoneRM" class="form-control" placeholder="Enter your phone number">
-        </div>
-        <div class="navigation-buttons">
-          <button class="btn btn-primary" onclick="nextStep(1)">Next</button>
-        </div>
-      </div>
-
-      <div class="step" id="step2">
-        <h3>Enter OTP</h3>
-        <input type="text" id="otp" class="form-control" placeholder="Enter OTP">
-        <div class="navigation-buttons">
-          <button class="btn btn-secondary" onclick="prevStep(1)">Previous</button>
-          <button class="btn btn-primary" onclick="nextStep(2)">Next</button>
-        </div>
-      </div>
-
-      <div class="step" id="step3">
-        <h3>Enter ID Number</h3>
-        <input type="text" id="idNumber" class="form-control" placeholder="Enter ID Number">
-        <select id="verificationMethod" class="form-select mt-3" onchange="showVerificationFields()">
-          <option value="">Choose Verification Method...</option>
-          <option value="security">Security Questions</option>
-          <option value="biometric">Biometric Scanning</option>
-        </select>
-        <div id="securityFields" class="mt-3" style="display:none;">
-          <label for="securityQuestion">Security Question:</label>
-          <input type="text" id="securityQuestion" class="form-control" placeholder="Your favorite color?">
-        </div>
-        <div id="biometricFields" class="mt-3" style="display:none;">
-          <p>Biometric scanning functionality will be added here.</p>
-        </div>
-        <div class="navigation-buttons">
-          <button class="btn btn-secondary" onclick="prevStep(2)">Previous</button>
-          <button class="btn btn-primary" onclick="nextStep(3)">Next</button>
-        </div>
-      </div>
-
-      <div class="step" id="step4">
-        <h3>Verify Your Information</h3>
-        <div class="sample-info">
-          <img src="https://via.placeholder.com/120" alt="Sample User">
-          <div class="info-details">
-            <p><strong>Name:</strong> John Doe</p>
-            <p><strong>ID Number:</strong> 12345678</p>
-            <p><strong>Phone:</strong> +1234567890</p>
-          </div>
-        </div>
-        <div class="navigation-buttons">
-          <button class="btn btn-secondary" onclick="prevStep(3)">Previous</button>
-          <button class="btn btn-primary" onclick="nextStep(4)">Next</button>
-        </div>
-      </div>
-
-      <div class="step" id="step5">
-        <h3>Capture ID</h3>
-        <div class="camera-container">
-          <video id="video" autoplay playsinline></video>
-          <div class="camera-square"></div>
-        </div>
-        <button class="btn btn-primary" id="capture">Capture ID</button>
-        <div class="navigation-buttons">
-          <button class="btn btn-secondary" onclick="prevStep(4)">Previous</button>
-          <button class="btn btn-primary" onclick="nextStep(5)">Next</button>
-        </div>
-      </div>
-
-      <div class="step" id="step6">
-        <h3>Select Account Type</h3>
-        <select id="accountType" class="form-select">
-          <option value="">Choose Account Type...</option>
-          <option value="savings">Savings Account</option>
-          <option value="current">Current Account</option>
-          <option value="business">Business Account</option>
-        </select>
-        <div class="navigation-buttons">
-          <button class="btn btn-secondary" onclick="prevStep(5)">Previous</button>
-          <button class="btn btn-primary" onclick="nextStep(6)">Next</button>
-        </div>
-      </div>
-
-      <div class="step" id="step7">
-        <h3>Complete Address and Next of Kin Information</h3>
-        <input type="text" id="address" class="form-control" placeholder="Address">
-        <input type="text" id="nextOfKin" class="form-control mt-3" placeholder="Next of Kin">
-        <div class="navigation-buttons">
-          <button class="btn btn-secondary" onclick="prevStep(6)">Previous</button>
-          <button class="btn btn-primary" onclick="nextStep(7)">Next</button>
-        </div>
-      </div>
-
-      <div class="step" id="step8">
-        <h3>Agree to Terms and Conditions</h3>
-        <input type="checkbox" id="termsCheckbox">
-        <label for="termsCheckbox">I agree to the terms and conditions</label>
-        <div class="navigation-buttons">
-          <button class="btn btn-secondary" onclick="prevStep(7)">Previous</button>
-          <button class="btn btn-success" onclick="submitForm()">Submit</button>
-        </div>
-      </div>
-
-      <div id="successMessage" class="mt-5" style="display:none;">
-        <h3
-
->Congratulations!</h3>
-        <p>Your information is under review. You will receive a confirmation via message or email with your account number.</p>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">ID Scanner</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+        </ul>
       </div>
     </div>
+  </nav>
+
+  <!-- Main Content -->
+  <div class="container text-center mt-5">
+    <h1>ID Scanner</h1>
+    <p>Align the ID within the square and press "Capture" to scan.</p>
+    <div class="camera-container">
+      <video id="video" autoplay playsinline></video>
+      <div class="camera-square"></div>
+    </div>
+    <button class="btn btn-primary mt-3" id="capture">Capture ID</button>
+    <a href="preview.html" class="btn btn-success mt-3" id="next" style="display: none;">Next</a>
   </div>
 
-  <footer class="footer text-center">
-    <p>&copy; 2024 Account Opening Service</p>
+  <!-- Footer -->
+  <footer class="text-center">
+    <p>&copy; 2024 ID Scanner. All rights reserved.</p>
   </footer>
 
+  <!-- Bootstrap JS and dependencies -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    let currentStep = 1;
+    const video = document.getElementById('video');
+    let stream;
+    let canvas = document.createElement('canvas');
+    let capturedImage = null;
 
-    function showAccountFields() {
-      const method = document.getElementById('accountMethod').value;
-      document.getElementById('selfFields').style.display = method === 'self' ? 'block' : 'none';
-      document.getElementById('rmFields').style.display = method === 'rm' ? 'block' : 'none';
+    // Start the camera
+    async function startCamera() {
+      try {
+        stream = await navigator.mediaDevices.getUserMedia({
+          video: { facingMode: 'environment' } // Use back camera
+        });
+        video.srcObject = stream;
+      } catch (error) {
+        console.error("Error accessing the camera: ", error);
+      }
     }
 
-    function showVerificationFields() {
-      const verificationMethod = document.getElementById('verificationMethod').value;
-      document.getElementById('securityFields').style.display = verificationMethod === 'security' ? 'block' : 'none';
-      document.getElementById('biometricFields').style.display = verificationMethod === 'biometric' ? 'block' : 'none';
-    }
+    // Capture button handler
+    document.getElementById('capture').addEventListener('click', function() {
+      // Turn on the flash, if applicable
+      const track = stream.getVideoTracks()[0];
+      if (track.getCapabilities().torch) {
+        track.applyConstraints({ advanced: [{ torch: true }] });
+      }
 
-    function nextStep(step) {
-      document.getElementById(`step${step}`).classList.remove('active');
-      document.getElementById(`step${step + 1}`).classList.add('active');
-      currentStep++;
-    }
-
-    function prevStep(step) {
-      document.getElementById(`step${step + 1}`).classList.remove('active');
-      document.getElementById(`step${step}`).classList.add('active');
-      currentStep--;
-    }
-
-    function captureID() {
-      const video = document.getElementById('video');
-      const canvas = document.createElement('canvas');
+      // Capture the frame
       canvas.width = video.videoWidth;
       canvas.height = video.videoHeight;
-      const ctx = canvas.getContext('2d');
-      ctx.drawImage(video, 0, 0);
-      // Do something with the captured image.
-    }
+      canvas.getContext('2d').drawImage(video, 0, 0);
+      capturedImage = canvas.toDataURL('image/png'); // Save captured image as data URL
+      
+      // Store captured image in localStorage for the next page
+      localStorage.setItem('capturedImage', capturedImage);
 
-    function submitForm() {
-      const termsChecked = document.getElementById('termsCheckbox').checked;
-      if (!termsChecked) {
-        alert("You must agree to the terms and conditions.");
-        return;
+      // Show the next button
+      document.getElementById('next').style.display = 'inline-block';
+
+      // Optionally turn off the flash after capturing
+      if (track.getCapabilities().torch) {
+        setTimeout(() => track.applyConstraints({ advanced: [{ torch: false }] }), 500);
       }
-      document.getElementById('formContainer').style.display = 'none';
-      document.getElementById('successMessage').style.display = 'block';
-    }
+    });
 
-    // Camera Permission for iPhone
-    if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-      document.getElementById('step5').addEventListener('click', () => {
-        navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } })
-          .then(stream => {
-            const video = document.getElementById('video');
-            video.srcObject = stream;
-            video.play();
-          })
-          .catch(err => {
-            console.error("Error accessing camera: ", err);
-          });
-      });
-    }
-
+    // Start the camera
+    startCamera();
   </script>
 </body>
 </html>
