--- a/camera.html
+++ b/camera.html
@@ -94,15 +94,30 @@
         <div class="camera-square"></div>
       </div>
       <button class="btn btn-primary mt-3" id="capture">Capture ID</button>
+      
+      <!-- Inline Preview -->
+      <div id="preview-section" class="mt-4" style="display: none;">
+        <h2>Preview Captured ID</h2>
+        <img id="capturedImage" class="captured-image" alt="Captured ID">
+        <button class="btn btn-success mt-3" id="next-step">Proceed</button>
+      </div>
     </div>
 
-    <!-- Step 2: Preview Captured ID -->
+    <!-- Step 2: Show Customer Information for Confirmation -->
     <div id="step-2" class="step">
-      <h1>Preview Captured ID</h1>
-      <p>This is a preview of the captured ID. If the image is clear, you can proceed.</p>
-      <img id="capturedImage" class="captured-image" alt="Captured ID">
-      <button class="btn btn-secondary mt-3" id="back">Back</button>
-      <button class="btn btn-success mt-3" id="confirm">Confirm and Submit</button>
+      <h1>Customer Information</h1>
+      <p>Please confirm the information below:</p>
+      <div class="row justify-content-center">
+        <div class="col-md-4 text-start">
+          <p><strong>Full Name:</strong> John Doe</p>
+          <p><strong>ID Number:</strong> 123456789</p>
+          <p><strong>Date of Birth:</strong> 01/01/1990</p>
+          <p><strong>Address:</strong> 123 Main St, City, Country</p>
+          <img id="confirmationImage" class="captured-image" alt="Captured ID for Confirmation">
+        </div>
+      </div>
+      <button class="btn btn-secondary mt-3" id="back-step">Back</button>
+      <button class="btn btn-success mt-3" id="confirm-submit">Confirm and Submit</button>
     </div>
   </div>
 
@@ -151,11 +166,9 @@
       canvas.getContext('2d').drawImage(video, 0, 0);
       capturedImage = canvas.toDataURL('image/png'); // Save captured image as data URL
 
-      // Show the preview in the next step
+      // Show the preview in the same step
       document.getElementById('capturedImage').src = capturedImage;
-
-      // Move to step 2
-      showStep('step-2');
+      document.getElementById('preview-section').style.display = 'block';
 
       // Optionally turn off the flash after capturing
       if (track.getCapabilities().torch) {
@@ -163,15 +176,21 @@
       }
     });
 
-    // Back button handler (to go back to camera step)
-    document.getElementById('back').addEventListener('click', function() {
+    // Proceed to customer information step
+    document.getElementById('next-step').addEventListener('click', function() {
+      document.getElementById('confirmationImage').src = capturedImage;
+      showStep('step-2');
+    });
+
+    // Back to capture step
+    document.getElementById('back-step').addEventListener('click', function() {
       showStep('step-1');
     });
 
-    // Confirm and Submit button handler
-    document.getElementById('confirm').addEventListener('click', function() {
-      alert("ID confirmed and submitted!");
-      // Add your submission logic here (e.g., send the capturedImage to a server)
+    // Confirm and submit handler
+    document.getElementById('confirm-submit').addEventListener('click', function() {
+      alert("Customer information confirmed and submitted!");
+      // Add your submission logic here (e.g., send the capturedImage and customer info to a server)
     });
 
     // Start the camera on page load
