--- a/camera.html
+++ b/camera.html
@@ -7,7 +7,6 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    /* CSS for camera layout */
     .camera-container {
       width: 320px;
       height: 240px;
@@ -97,6 +96,7 @@
         <img id="capturedImage" class="captured-image" alt="Captured ID">
       </div>
       <button class="btn btn-primary mt-3" id="capture">Capture ID</button>
+      <button class="btn btn-danger mt-3" id="retake" style="display: none;">Retake</button>
       <p id="photoCapturedMessage" class="photo-captured-message" style="display: none;">Photo has been captured successfully!</p>
       <button class="btn btn-success mt-3" id="next-step" style="display: none;">Proceed</button>
     </div>
@@ -131,6 +131,7 @@
     const img = document.getElementById('capturedImage');
     const photoCapturedMessage = document.getElementById('photoCapturedMessage');
     const nextStepButton = document.getElementById('next-step');
+    const retakeButton = document.getElementById('retake');
     let stream;
     let canvas = document.createElement('canvas');
     let capturedImage = null;
@@ -149,29 +150,41 @@
 
     // Capture button handler
     document.getElementById('capture').addEventListener('click', function() {
-      // Turn on the flash, if applicable
       const track = stream.getVideoTracks()[0];
       if (track.getCapabilities().torch) {
-        track.applyConstraints({ advanced: [{ torch: true }] });
+        track.applyConstraints({ advanced: [{ torch: true }] }); // Turn on flash before capture
       }
 
-      // Capture the frame
-      canvas.width = video.videoWidth;
-      canvas.height = video.videoHeight;
-      canvas.getContext('2d').drawImage(video, 0, 0);
-      capturedImage = canvas.toDataURL('image/png'); // Save captured image as data URL
+      setTimeout(function() {
+        // Capture the frame
+        canvas.width = video.videoWidth;
+        canvas.height = video.videoHeight;
+        canvas.getContext('2d').drawImage(video, 0, 0);
+        capturedImage = canvas.toDataURL('image/png'); // Save captured image as data URL
 
-      // Replace the video feed with the captured image
-      img.src = capturedImage;
-      img.style.display = 'block'; // Show the captured image
-      video.style.display = 'none'; // Hide the video feed
-      photoCapturedMessage.style.display = 'block'; // Show the "photo captured" message
-      nextStepButton.style.display = 'inline-block'; // Show the next button
+        // Replace the video feed with the captured image
+        img.src = capturedImage;
+        img.style.display = 'block'; // Show the captured image
+        video.style.display = 'none'; // Hide the video feed
+        photoCapturedMessage.style.display = 'block'; // Show the "photo captured" message
+        nextStepButton.style.display = 'inline-block'; // Show the next button
+        retakeButton.style.display = 'inline-block'; // Show the "Retake" button
 
-      // Optionally turn off the flash after capturing
-      if (track.getCapabilities().torch) {
-        setTimeout(() => track.applyConstraints({ advanced: [{ torch: false }] }), 500);
-      }
+        // Turn off the flash after capture
+        if (track.getCapabilities().torch) {
+          setTimeout(() => track.applyConstraints({ advanced: [{ torch: false }] }), 500);
+        }
+      }, 500); // Adding a slight delay to synchronize the capture
+    });
+
+    // Retake button handler
+    document.getElementById('retake').addEventListener('click', function() {
+      img.style.display = 'none'; // Hide the captured image
+      video.style.display = 'block'; // Show the video feed again
+      photoCapturedMessage.style.display = 'none'; // Hide the capture message
+      nextStepButton.style.display = 'none'; // Hide the next button
+      retakeButton.style.display = 'none'; // Hide the retake button
+      startCamera(); // Restart the camera
     });
 
     // Proceed to customer information step
